--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,12 +1,14 @@
 ---
-// global_style
 import "../styles/global.scss";
 
-import { SITE_TITLE, SITE_DESCRIPTION, SITE_YEAR } from "../consts";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 
 import Head from "./Head.astro";
-import Link from "./Link.astro";
-import EffectGrain from "./_EffectGrain.astro";
+// import Link from "./Link.astro";
+// import EffectGrain from "./_EffectGrain.astro";
+
+import Header from "./Header.astro";
+import Footer from "./Footer.astro";
 
 export interface Props {
   title?: string;
@@ -19,67 +21,46 @@ const {
   description = SITE_DESCRIPTION,
   image,
 } = Astro.props as Props;
-
-const body_page_class = [{ frontpage: Astro.url.pathname == "/" }];
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <Head {title} {description} {image} />
 
-  <body class:list={["sticky-footer", body_page_class]}>
-    <header id="site-header">
-      <span id="site-title">
-        {SITE_TITLE}
-      </span>
-      <nav>
-        <Link href="/">Home</Link>
-        <Link href="/blog">Blog</Link>
-        <!-- <Link href="/work">Works</Link> -->
-      </nav>
-    </header>
+  <body class="sticky-footer">
+    <div class="wrapper">
+      <Header />
 
-    <hr />
-
-    <main>
       <slot />
-    </main>
 
-    <hr />
-
-    <footer id="site-footer">
-      <!-- codewithintent; instillmindfulness; learnandcreate -->
-      <p class="small">
-        &copy; {SITE_TITLE}
-        {SITE_YEAR} &middot; <Link class="muted" href="/rss.xml">rss</Link>
-      </p>
-      <EffectGrain />
-    </footer>
-
-    <style>
+      <Footer />
+    </div>
+    <style is:global>
+      /* sticky_footer */
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
       body.sticky-footer {
-        min-height: 100vh;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-
-        & > main {
+        & .wrapper {
+          min-height: 100%;
+          display: flex;
+          flex-direction: column;
+        }
+        & .wrapper > header,
+        & .wrapper > footer {
+          flex-grow: 0;
+          flex-shrink: 0;
+        }
+        & .wrapper > main {
           flex-grow: 1;
         }
-        & > footer {
-          margin-top: auto;
-        }
-      }
-      #site-title {
-        font-size: var(--size);
-        font-weight: bold;
-      }
-      header > nav > a {
-        margin-right: var(--size);
-      }
-      main {
-        padding: var(--size) 0;
       }
     </style>
+    <script>
+      import "bootstrap";
+    </script>
   </body>
 </html>
