--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,50 +1,46 @@
 ---
-import { CollectionEntry, getCollection } from "astro:content";
+import { getCollection, getEntry } from "astro:content";
+
 import Layout from "../../layouts/Layout.astro";
-import Link from "../../layouts/Link.astro";
 
 export async function getStaticPaths() {
-  const posts = await getCollection("blog");
-  return posts.map((post) => ({
+  const allPosts = await getCollection("blog");
+
+  // Filter out draft posts
+  const publishedPosts = allPosts.filter(post => !post.data.draft);
+
+  return publishedPosts.map((post) => ({
     params: { slug: post.slug },
-    props: post,
   }));
 }
 
-type Props = CollectionEntry<"blog">;
+// Fetch the post based on the slug
+const postSlug = Astro.params.slug;
+const entry = await getEntry("blog", postSlug);
+let Content;
 
-const post = Astro.props;
-const { Content } = await post.render();
-
-const { title, description, pubDate } = post.data;
-
-const image = post.slug;
+if (entry) {
+  ({ Content } = await entry.render());
+}
 ---
 
-<Layout {title} {description}>
-  <article class="blog single">
-    <img class="blog-featured-image" src={`/assets/${image}.png`} />
-
-    <date>
-      {
-        pubDate &&
-          new Date(pubDate).toLocaleDateString(undefined, {
-            month: "long",
-            day: "numeric",
-            year: "numeric",
-          })
-      }
-    </date>
-
-    <h1>{title}</h1>
-
-    <Content />
-  </article>
-  <Link
-    class="prev mb-sm"
-    style="cursor: pointer"
-    onclick="event.preventDefault(); window.history.back();"
-  >
-    Back
-  </Link>
+<Layout title={entry?.data.title} description={entry?.data.description}>
+  <main>
+    <article id="blog-single" class="container section-sm">
+      <div class="row justify-content-center">
+        <div class="col-md-8">
+          {
+            entry ? (
+              <article>
+                <h1>{entry.data.title}</h1>
+                <Content />
+              </article>
+            ) : (
+              <p>Post not found.</p>
+            )
+          }
+        </div>
+      </div>
+    </article>
+  </main>
 </Layout>
