remove all blogs but 2; new post of first sketch with new boilerplate

--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -9,8 +9,8 @@ import { SITE_TITLE, SITE_DESCRIPTION, SITE_YEAR } from "../consts";
     <div class="row pt-3 border-top">
       <div class="col-md-4">
         <p>
-          Just a blog to collect my thought and learning.
-          <br />Enjoy your visit, happy learning, thanks for your time! 🚀
+          A blog with collection of my thought and learnings.
+          <br />Enjoy your visit, happy learning & thank you for your time!
         </p>
       </div>
     </div>
@@ -25,18 +25,18 @@ import { SITE_TITLE, SITE_DESCRIPTION, SITE_YEAR } from "../consts";
       </div>
 
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <!-- <li class="ms-3">
+          <a class="text-body-secondary" target="_blank" href="#"><i class="bi-twitter"></i></a>
+        </li> -->
         <li class="ms-3">
-          <a class="text-body-secondary" href="#"><i class="bi-twitter"></i></a>
-        </li>
-        <li class="ms-3">
-          <a class="text-body-secondary" href="#"
+          <a class="text-body-secondary" target="_blank" href="https://www.instagram.com/jasperyzh/"
             ><i class="bi-instagram"></i></a
           >
         </li>
-        <li class="ms-3">
-          <a class="text-body-secondary" href="#"><i class="bi-facebook"></i></a
+        <!-- <li class="ms-3">
+          <a class="text-body-secondary" target="_blank" href="#"><i class="bi-facebook"></i></a
           >
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
