blog revamp; creating /portfolio, /playground

--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -134,4 +134,16 @@ const { large_banner } = Astro.props as Props;
       background: #ccc;
     }
   }
+
+  /* header {
+    position:sticky;
+    top: -3rem;
+   
+    z-index: 9999;
+  }*/
+
+  .navbar-collapse {
+    position: sticky;
+    top: -3rem;
+  }
 </style>
